--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!--Hoặc thích thì lấy ảnh bằng link-->
             <h3 class="mt-3">Thông Tin Cá Nhân</h3>
             <ul class="info-list text-start">
-                <li><strong>Họ và tên:</strong> Trần Đức Trí </li>
+                <li><strong>Họ và tên:</strong> Trần Đức Trí (fake)</li>
                 <li><strong>MSSV:</strong> 2180608441 </li>
                 <li><strong>Năm học:</strong> 2021-2025  </li>
                 <li><strong>Chuyên ngành:</strong> CNPM </li>
