Sua giao dien lan 2

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
             <li><strong>Các hội thảo tham gia:</strong> AI, Blockchain</li>
             <li><strong>Các đồ án đã làm:</strong> Website bán hàng, Ứng dụng mobile</li>
         </ul>
+        <div class="mt-3">
+            <button class="btn btn-primary m-1" onclick="location.href='8441_Tri.html'">Bio1</button>
+            <button class="btn btn-success m-1" onclick="location.href='index.html'">Bio2</button>
+            <button class="btn btn-warning m-1" onclick="location.href='Phu.html'">Bio3</button>
+            <button class="btn btn-danger m-1" onclick="location.href='bio4.html'">Bio4</button>
+            <button class="btn btn-info m-1" onclick="location.href='bio5.html'">Bio5</button>
+        </div>
     </div>
 </div>
 
