--- a/8441_Tri.html
+++ b/8441_Tri.html
@@ -49,11 +49,11 @@
         </ul>
 
         <div class="mt-3">
-            <button class="btn btn-primary m-1" onclick="location.href='bio1.html'">Bio1</button>
-            <button class="btn btn-success m-1" onclick="location.href='bio2.html'">Bio2</button>
-            <button class="btn btn-warning m-1" onclick="location.href='bio3.html'">Bio3</button>
-            <button class="btn btn-danger m-1" onclick="location.href='bio4.html'">Bio4</button>
-            <button class="btn btn-info m-1" onclick="location.href='bio5.html'">Bio5</button>
+            <button class="btn btn-primary m-1" onclick="location.href='8441_Tri.html'">Trí</button>
+            <button class="btn btn-success m-1" onclick="location.href='index.html'">Đăng</button>
+            <button class="btn btn-warning m-1" onclick="location.href='Phu.html'">Phú</button>
+            <button class="btn btn-danger m-1" onclick="location.href='bio4.html'">Đức</button>
+            <button class="btn btn-info m-1" onclick="location.href='bio5.html'">Tú</button>
         </div>
     </div>
 </div>
