--- a/Phu.html
+++ b/Phu.html
@@ -47,11 +47,11 @@
             <li><strong>Các đồ án đã làm:</strong> Website bán hàng, Ứng dụng mobile</li>
         </ul>
         <div class="mt-3">
-            <button class="btn btn-primary m-1" onclick="location.href='8441_Tri.html'">Bio1</button>
-            <button class="btn btn-success m-1" onclick="location.href='index.html'">Bio2</button>
-            <button class="btn btn-warning m-1" onclick="location.href='Phu.html'">Bio3</button>
-            <button class="btn btn-danger m-1" onclick="location.href='bio4.html'">Bio4</button>
-            <button class="btn btn-info m-1" onclick="location.href='bio5.html'">Bio5</button>
+            <button class="btn btn-primary m-1" onclick="location.href='8441_Tri.html'">Trí</button>
+            <button class="btn btn-success m-1" onclick="location.href='index.html'">Đăng</button>
+            <button class="btn btn-warning m-1" onclick="location.href='Phu.html'">Phú</button>
+            <button class="btn btn-danger m-1" onclick="location.href='bio4.html'">Đức</button>
+            <button class="btn btn-info m-1" onclick="location.href='bio5.html'">Tú</button>
         </div>
     </div>
 </div>
