--- a/index.html
+++ b/index.html
@@ -6,42 +6,70 @@
     <title>Thông Tin Cá Nhân</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        /* Background gradient */
         body {
-            background-color: #f8f9fa;
+            background: linear-gradient(to right, #56ccf2, #2f80ed);
+            font-family: 'Arial', sans-serif;
+            height: 100vh;
         }
+
+        /* Profile card styling */
         .profile-card {
-            background-color: #a0f0c5;
+            background: white;
             border-radius: 15px;
             padding: 30px;
-            max-width: 500px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 450px;
+            text-align: center;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            transition: transform 0.3s, box-shadow 0.3s;
         }
+
+        /* Hover effect */
+        .profile-card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
+        }
+
+        /* Profile image */
         .profile-img {
             width: 150px;
             height: 150px;
             object-fit: cover;
             border-radius: 50%;
-            border: 3px solid white;
+            border: 4px solid #2f80ed;
         }
+
+        /* Info list */
         .info-list {
-            list-style-type: none;
+            list-style: none;
             padding: 0;
+            text-align: left;
         }
+
         .info-list li {
-            margin-bottom: 10px;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .info-list li:last-child {
+            border-bottom: none;
+        }
+
+        .info-list strong {
+            color: #2f80ed;
         }
     </style>
 </head>
 <body>
 
 <div class="container d-flex justify-content-center align-items-center vh-100">
-    <div class="profile-card text-center">
+    <div class="profile-card">
         <img src="avt.jpeg" alt="Ảnh đại diện" class="profile-img">
-        <h3 class="mt-3">Thông Tin Cá Nhân</h3>
-        <ul class="info-list text-start">
-            <li><strong>Họ và tên:</strong> Lê Hải Đăng </li>
+        <h3 class="mt-3">Lê Hải Đăng</h3>
+        <p class="text-muted">Sinh viên Công nghệ Thông tin</p>
+        <ul class="info-list">
             <li><strong>MSSV:</strong> 2180607435</li>
-            <li><strong>Năm học:</strong> 2021 - 2025 </li>
+            <li><strong>Năm học:</strong> 2021 - 2025</li>
             <li><strong>Chuyên ngành:</strong> Công nghệ thông tin</li>
             <li><strong>Các hội thảo tham gia:</strong> AI, Blockchain</li>
             <li><strong>Các đồ án đã làm:</strong> Website bán hàng, Ứng dụng mobile</li>
