Sua giao dien lan cuoi

--- a/Phu.html
+++ b/Phu.html
@@ -50,7 +50,7 @@
             <button class="btn btn-primary m-1" onclick="location.href='8441_Tri.html'">Trí</button>
             <button class="btn btn-success m-1" onclick="location.href='index.html'">Đăng</button>
             <button class="btn btn-warning m-1" onclick="location.href='Phu.html'">Phú</button>
-            <button class="btn btn-danger m-1" onclick="location.href='bio4.html'">Đức</button>
+            <button class="btn btn-danger m-1" onclick="location.href='vanduc.html'">Đức</button>
             <button class="btn btn-info m-1" onclick="location.href='bio5.html'">Tú</button>
         </div>
     </div>
